# BERT

./: CMakeLists.txt  attention_hip.cpp  attention_hip.hpp  bert_components_hip.cpp  bert_components_hip.hpp  bert_config.hpp  bindings.cpp  common_hip.cpp  common_hip.hpp  hip_kernels.cpp  hip_kernels.hpp  language_model_hip.cpp  language_model_hip.hpp  main.cpp  nn_layers_hip.cpp  nn_layers_hip.hpp  optimizer_hip.cpp  optimizer_hip.hpp  pretrain.py  shampoo_vs_adamw.cpp  workspace_manager.cpp  workspace_manager.hpp
